Tue Mar 26 10:23:05 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* modify Linedit: fix Prolog prompt when Linedit is not activated
	* modify linedit: accept gui=silent in env var LINEDIT
	  (does not warn if the windows gui DLL is not found)
	* fixes for Windows 8 (i686 and x86_64) with MSVS 2012, mingw64 gcc > 4.5.3
	* add Prolog flags address_bits and compiled_at

Thu Mar 14 12:46:35 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the FD solver (option backtracks in fd_labeling)
	* improve the FD solver (better propagation for reified constraints at labeling)
	* improve the FD solver (add labeling option: value_method(bisect))

Mon Mar 11 15:42:31 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* improve the FD solver (avoid some cases of C stack overflow, improved fd_domain/3)
	* add PlULong to gprolog.h and PlThrow(ball) to C foreign interface

Mon Feb 25 13:57:51 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the FD solver (regression bug in 1.4.2)

Wed Nov 28 17:04:46 CET 2012 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the compiler for byte-code with op/3 directive

Thu Nov 22 16:20:23 CET 2012 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the debugger
	* modify decompose_file_name/4 (fix problems under windows)
	* add built-in is_absolute_file_name/1 and is_relative_file_name/1
	* modify the compiler include/1 directive handling
	  (if the file to include is not found, seach in directories of parent includers)

Thu Nov 15 16:15:50 CET 2012 <Daniel.Diaz@univ-paris1.fr>

	* modify atom table management (its size can be defined via env. var MAX_ATOM)
	* fix a bug with soft-call inside a meta-call
	* implement term_hash/2 and term_hash/4. Bacward incompatibility:
	  new_atom/3 and and atom_hash/2 no longer exists.
	* fix some little bugs with 64 bits (e.g. stream id)

Tue Oct 30 16:27:21 CET 2012 <Daniel.Diaz@univ-paris1.fr>

	* modify the FD solver to handle very long computations

Mon Sep 24 15:03:11 CEST 2012 <Daniel.Diaz@univ-paris1.fr>
