@@ -7566,6 +7566,18 @@ system & N \\
 
 \hline
 
+\IdxPFD{c\_cc} & an atom & C compiler used to compile GNU Prolog (\texttt{gcc}, \texttt{cc}, \texttt{cl},...) & N \\
+
+\hline
+
+\IdxPFD{c\_cflags} & an atom & \texttt{CFLAGS} used to compile GNU Prolog & N \\
+
+\hline
+
+\IdxPFD{c\_ldflags} & an atom & \texttt{LDFLAGS} used to compile GNU Prolog & N \\
+
+\hline
+
 \IdxPFD{address\_bits} & an integer & address size of the machine (32 or 64) & N \\
 
 \hline
