@@ -76,6 +76,10 @@ enum
   FLAG_HOST,
   FLAG_ARCH,
   FLAG_COMPILED_AT,
+  FLAG_C_CC,
+  FLAG_C_CFLAGS,
+  FLAG_C_LDFLAGS,
+
   FLAG_ADDRESS_BITS,
 
   FLAG_VERSION_DATA,
