@@ -47,7 +47,9 @@ top_level :-
 	current_prolog_flag(prolog_version, Version),
 	current_prolog_flag(prolog_copyright, Copyright),
 	current_prolog_flag(address_bits, Bits),
-	format(top_level_output, '~N~a ~a (~d bits)~n', [Name, Version, Bits]),
+	current_prolog_flag(prolog_date, Date),
+	current_prolog_flag(c_cc, CC),
+	format(top_level_output, '~N~a ~a (~d bits compiled ~a with ~a)~n', [Name, Version, Bits, Date, CC]),
 	write(top_level_output, 'By Daniel Diaz'),
 	nl,
 	format(top_level_output, '~a~n', [Copyright]),
