@@ -1,10 +1,11 @@
 Change in GNU Prolog version 1.4.3:
 
+* modify top-level banner to show 32/64 bits, compile date, C compiler name
 * modify Linedit: fix Prolog prompt when Linedit is not activated
 * modify linedit: accept gui=silent in env var LINEDIT
   (does not warn if the windows gui DLL is not found)
 * fixes for Windows 8 (i686 and x86_64) with MSVS 2012, mingw64 gcc > 4.5.3
-* add Prolog flags address_bits and compiled_at
+* add Prolog flags address_bits, compiled_at, c_cc, c_cflags, c_ldflags
 * fix a bug in the FD solver (option backtracks in fd_labeling)
 * improve the FD solver (better propagation for reified constraints at labeling)
 * improve the FD solver (add labeling option: value_method(bisect))
